# g_rag_llery

./: README.md
docs/flows/: auth.mermaid
infrastructure/aws/: buckets.tf  output.tf  provider.tf  queues.tf  variables.tf
server_apps/: .gitignore  Cargo.toml  docker-compose.yml  image_feeder.env.sample  kafka.env.sample  minio.env.sample  run_create_topic.sh
server_apps/db_storage/: Cargo.toml
server_apps/db_storage/src/: errors.rs  lib.rs
server_apps/db_storage/src/migrations/: 25110002_create-rag-tables.sql
server_apps/db_storage/src/models/: mod.rs  user_photos.rs
server_apps/image_feeder/: Cargo.toml  Dockerfile
server_apps/image_feeder/.sqlx/: query-06b8dfab9c5f09dda88cd965f08c07f66ba53b4a2be0ffad54f5f28b6fa73fe2.json  query-41f2d08d4ff05bbe726434f70361260ff5dd275476a770cddb6527cbffcd89cb.json  query-5a2ce92dcdfedc6267e22b6f4ae5128d60f9f6d6575fc7764ab54cea6cb2d047.json  query-7d7f6253250e84cd35751eae82634495b1c81b3e6022c6fb6fc060a65df633eb.json  query-defe619b9e0a0ac317a01ccb72a599ad175446b3eda63668d47800acc477b342.json  query-e1043a8cee4e1d9de96755f014e3d051900361d03bf0aed1cd9c1394440a6991.json  query-fcc5f7956a78bdf7aa81990627b2b65f4030f93dba4d9c382d4f9dd786aeafef.json
server_apps/image_feeder/src/: bucket.rs  embeddings.rs  errors.rs  image_operations.rs  llm_messages.rs  llm_retrieval.rs  main.rs  queue.rs  queue_messages.rs
server_apps/web_server/: Cargo.toml  Dockerfile  build.rs
server_apps/web_server/.sqlx/: query-0a013643a1fd4af6955e523193f6fd05779fd2d7baf55b98ce53ef790dde9cd8.json  query-6aa924b480cf435ea86a64cd6ba17227cdaa01a931764642502aa3acc9a86881.json  query-7084c2428428d94b19bfe124e8b49ef8f3e3e320002a48228b025c7ae85440e6.json  query-9ac8a9f766fd02a9c35095599b20d07f1318f12f15cecaa6894bdb7fc248fe88.json  query-a1d42b85b6e5995fba4cecdb9c9153024439ddc46cb12a4644cbd3b5554b13d8.json
server_apps/web_server/proto/: gallery_view.proto  user_auth.proto
server_apps/web_server/src/: bucket.rs  config.rs  error.rs  gallery_view.rs  main.rs  user_auth.rs
webapp_gallery/: .env.sample  .gitignore  Dockerfile  package-lock.json  package.json  vite.config.ts
webapp_gallery/prisma/: schema.prisma
webapp_gallery/src/: app.d.ts  app.html
webapp_gallery/src/components/upload/: preview.svelte
webapp_gallery/src/lib/server/: minio.ts
webapp_gallery/src/lib/server/prisma/: prisma.ts
webapp_gallery/src/proto/: gallery_view.ts  user_auth.ts
webapp_gallery/src/routes/: +layout.svelte  +page.svelte
webapp_gallery/src/routes/api/auth/serverKey/: +server.ts
webapp_gallery/src/routes/api/uploads/: +server.ts
webapp_gallery/src/routes/auth/: +page.server.ts  +page.svelte
webapp_gallery/src/routes/auth/generate/: +page.server.ts  +page.svelte
webapp_gallery/src/routes/auth/logout/: +page.server.ts
webapp_gallery/src/routes/gallery/: +error.svelte  +page.server.ts  +page.svelte
webapp_gallery/src/routes/upload/: +page.server.ts  +page.svelte
webapp_gallery/static/: manifest.json  service-worker.js
