[package]
name = "db_storage"
version = "0.1.0"
edition = "2024"

[dependencies]
derive-getters = "0.5.0"
log = "0.4.28"
simple_logger = "5.0.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "time",  "uuid" ] }
time = { version= "0.3", features = ["macros"] }
pgvector = { version = "0.4", features = ["postgres", "sqlx"] }
futures-util = "0.3.31"

