[package]
name = "web_server"
version = "0.1.0"
edition = "2024"

[dependencies]
db_storage = { path = "../db_storage" }
crypto_box = { version = "0.9.1", features = ["chacha20"]}
env_logger = "0.11.8"
hex = "0.4.3"
log = "0.4.28"
prost = "0.14"
tonic = "0.14"
tonic-prost = "0.14"
rand = "0.9.2"
rand_core = { version = "0.9.3", features = ["std"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }

[build-dependencies]
tonic-prost-build = "0.14"

