[package]
name = "web_server"
version = "0.1.0"
edition = "2024"

[dependencies]
db_storage = { path = "../db_storage" }
crypto_box = { version = "0.9.1", features = ["chacha20"]}
derive-getters = "0.5.0"
hex = "0.4.3"
http = "1.3.1"
log = "0.4.28"
minio = "0.3.0"
prost = "0.14"
rand = "0.9.2"
rand_core = { version = "0.9.3", features = ["std"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.14"
tonic-prost = "0.14"
uuid = { version = "1.18.1", features = ["v4"] }
simple_logger = "5.1.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"]}
twox-hash = { version = "2.1.2", features = ["xxhash3_64"] }

[build-dependencies]
tonic-prost-build = "0.14"

